--- a/tests/org.eclipse.emf.teneo.hibernate.test/build.properties
+++ b/tests/org.eclipse.emf.teneo.hibernate.test/build.properties
@@ -1,7 +1,7 @@
 # <copyright>
 # </copyright>
 #
-# $Id: build.properties,v 1.16 2007/11/14 16:39:26 mtaal Exp $
+# $Id: build.properties,v 1.17 2007/11/14 19:20:34 mtaal Exp $
 
 bin.includes = .,\
                META-INF/,\
@@ -12,7 +12,8 @@ bin.includes = .,\
                src/log4j.properties,\
                test.xml,\
                src/org/eclipse/emf/teneo/hibernate/test/emf/test.hbm.xml,\
-               src/org/eclipse/emf/teneo/hibernate/test/test.persistence.xml
+               src/org/eclipse/emf/teneo/hibernate/test/test.persistence.xml,\
+               src/org/eclipse/emf/teneo/hibernate/test/emf/test2.hbm.xml
 jars.compile.order = .
 source.. = src/
 output.. = bin/
