--- a/plugins/org.eclipse.emf.teneo-feature/sourceTemplatePlugin/about.ini
+++ b/plugins/org.eclipse.emf.teneo-feature/sourceTemplatePlugin/about.ini
@@ -8,7 +8,7 @@
 aboutText=%featureText
 
 # Property "featureImage" contains path to feature image (32x32)
-featureImage=eclipse32.gif
+featureImage=modeling32.gif
 
 # Property "appName" contains name of the application (translated)
 appName=%featureName
