Set build.properties to 1.5

--- a/examples/org.eclipse.emf.teneo.tutorial/build.properties
+++ b/examples/org.eclipse.emf.teneo.tutorial/build.properties
@@ -2,8 +2,10 @@
 # <copyright>
 # </copyright>
 #
-# $Id: build.properties,v 1.8 2007/11/14 16:44:36 mtaal Exp $
+# $Id: build.properties,v 1.9 2007/11/19 15:05:16 mtaal Exp $
 
+javacSource = 5.0
+javacTarget = 5.0
 bin.includes = .,\
                model/,\
                META-INF/,\
