--- a/plugins/org.eclipse.emf.teneo.hibernate/plugin.properties
+++ b/plugins/org.eclipse.emf.teneo.hibernate/plugin.properties
@@ -13,7 +13,7 @@
 # *
 # * </copyright>
 # *
-# * $Id: plugin.properties,v 1.4 2007/02/01 12:34:14 mtaal Exp $
+# * $Id: plugin.properties,v 1.5 2007/11/20 09:44:10 mtaal Exp $
 # */
 
 # NLS_MESSAGEFORMAT_VAR
@@ -25,7 +25,7 @@
 # append it to the end of the file, and change the code to use the new name.
 # ==============================================================================
 
-Plugin.name = Teneo Hibernate
+Plugin.name = Teneo Hibernate (Incubation)
 Plugin.providerName = Eclipse.org
 
 # ==============================================================================
