--- a/plugins/org.eclipse.emf.teneo.eclipse/plugin.properties
+++ b/plugins/org.eclipse.emf.teneo.eclipse/plugin.properties
@@ -12,7 +12,7 @@
 # *
 # * </copyright>
 # *
-# * $Id: plugin.properties,v 1.2 2007/02/01 12:35:18 mtaal Exp $
+# * $Id: plugin.properties,v 1.3 2007/11/20 09:44:15 mtaal Exp $
 # */
 
 # NLS_MESSAGEFORMAT_VAR
@@ -24,7 +24,7 @@
 # append it to the end of the file, and change the code to use the new name.
 # ==============================================================================
 
-Plugin.name = Teneo Eclipse UI
+Plugin.name = Teneo Eclipse UI (Incubation)
 Plugin.providerName = Eclipse.org
 
 # ==============================================================================
