--- a/plugins/org.eclipse.emf.teneo.jpox/plugin.properties
+++ b/plugins/org.eclipse.emf.teneo.jpox/plugin.properties
@@ -13,7 +13,7 @@
 # *
 # * </copyright>
 # *
-# * $Id: plugin.properties,v 1.2 2007/02/01 12:36:36 mtaal Exp $
+# * $Id: plugin.properties,v 1.3 2007/11/20 09:44:22 mtaal Exp $
 # */
 
 # NLS_MESSAGEFORMAT_VAR
@@ -25,7 +25,7 @@
 # append it to the end of the file, and change the code to use the new name.
 # ==============================================================================
 
-Plugin.name = Teneo JPOX
+Plugin.name = Teneo JPOX (Incubation)
 Plugin.providerName = Eclipse.org
 
 # ==============================================================================
