--- a/tests/org.eclipse.emf.teneo.hibernate.test/plugin.properties
+++ b/tests/org.eclipse.emf.teneo.hibernate.test/plugin.properties
@@ -13,7 +13,7 @@
 # *
 # * </copyright>
 # *
-# * $Id: plugin.properties,v 1.4 2007/02/01 12:36:24 mtaal Exp $
+# * $Id: plugin.properties,v 1.5 2007/11/20 09:45:44 mtaal Exp $
 # */
 
 # NLS_MESSAGEFORMAT_VAR
@@ -25,7 +25,7 @@
 # append it to the end of the file, and change the code to use the new name.
 # ==============================================================================
 
-Plugin.name = Teneo Hibernate Test
+Plugin.name = Teneo Hibernate Test (Incubation)
 Plugin.providerName = Eclipse.org
 
 # ==============================================================================
