--- a/plugins/org.eclipse.emf.teneo.annotations/plugin.properties
+++ b/plugins/org.eclipse.emf.teneo.annotations/plugin.properties
@@ -12,7 +12,7 @@
 # *
 # * </copyright>
 # *
-# * $Id: plugin.properties,v 1.3 2007/02/01 12:35:03 mtaal Exp $
+# * $Id: plugin.properties,v 1.4 2007/11/20 09:46:10 mtaal Exp $
 # */
 
 # NLS_MESSAGEFORMAT_VAR
@@ -24,7 +24,7 @@
 # append it to the end of the file, and change the code to use the new name.
 # ==============================================================================
 
-Plugin.name = Teneo Annotations
+Plugin.name = Teneo Annotations (Incubation)
 Plugin.providerName = Eclipse.org
 
 # ==============================================================================
