--- a/tests/org.eclipse.emf.teneo.jpox.test/plugin.properties
+++ b/tests/org.eclipse.emf.teneo.jpox.test/plugin.properties
@@ -13,7 +13,7 @@
 # *
 # * </copyright>
 # *
-# * $Id: plugin.properties,v 1.2 2007/02/01 12:34:05 mtaal Exp $
+# * $Id: plugin.properties,v 1.3 2007/11/20 09:46:26 mtaal Exp $
 # */
 
 # NLS_MESSAGEFORMAT_VAR
@@ -25,7 +25,7 @@
 # append it to the end of the file, and change the code to use the new name.
 # ==============================================================================
 
-Plugin.name = Teneo JPOX Test
+Plugin.name = Teneo JPOX Test (Incubation)
 Plugin.providerName = Eclipse.org
 
 # ==============================================================================
