--- a/plugins/org.eclipse.emf.teneo-feature/sourceTemplatePlugin/plugin.properties
+++ b/plugins/org.eclipse.emf.teneo-feature/sourceTemplatePlugin/plugin.properties
@@ -12,7 +12,7 @@
 #  *
 #  * </copyright>
 #  *
-#  * $Id: plugin.properties,v 1.1 2007/09/03 12:51:44 mtaal Exp $
+#  * $Id: plugin.properties,v 1.2 2007/11/20 10:09:42 mtaal Exp $
 #  */
 
 # NLS_MESSAGEFORMAT_VAR
@@ -24,7 +24,7 @@
 # append it to the end of the file, and change the code to use the new name.
 # ==============================================================================
 
-pluginName=Eclipse Modeling Framework Technology (EMFT) Teneo Source
+pluginName=Teneo Source (Incubation)
 providerName=Eclipse.org
 
 # ==============================================================================
