--- a/plugins/org.eclipse.emf.teneo-feature/sourceTemplatePlugin/build.properties
+++ b/plugins/org.eclipse.emf.teneo-feature/sourceTemplatePlugin/build.properties
@@ -12,5 +12,6 @@ bin.includes = plugin.xml,\
                epl-v10.html,\
                feature.properties,\
                feature.xml,\
-               license.html
+               license.html,\
+               modeling32.png
 sourcePlugin = true
