--- a/examples/org.eclipse.emf.teneo.samples/plugin.properties
+++ b/examples/org.eclipse.emf.teneo.samples/plugin.properties
@@ -12,7 +12,7 @@
 # *
 # * </copyright>
 # *
-# * $Id: plugin.properties,v 1.4 2007/11/20 10:04:53 mtaal Exp $
+# * $Id: plugin.properties,v 1.5 2007/12/13 06:52:44 mtaal Exp $
 # */
 
 # NLS_MESSAGEFORMAT_VAR
@@ -31,3 +31,5 @@ Plugin.providerName = Eclipse.org
 # %%% END OF TRANSLATED PROPERTIES %%%
 # The above properties have been shipped for translation.
 # ==============================================================================
+pluginName = Julia Model
+providerName = www.example.org
