--- a/tests/org.eclipse.emf.teneo.hibernate.test/plugin.properties
+++ b/tests/org.eclipse.emf.teneo.hibernate.test/plugin.properties
@@ -13,7 +13,7 @@
 # *
 # * </copyright>
 # *
-# * $Id: plugin.properties,v 1.6 2007/11/20 10:04:54 mtaal Exp $
+# * $Id: plugin.properties,v 1.7 2008/01/18 06:20:02 mtaal Exp $
 # */
 
 # NLS_MESSAGEFORMAT_VAR
@@ -32,3 +32,5 @@ Plugin.providerName = Eclipse.org
 # %%% END OF TRANSLATED PROPERTIES %%%
 # The above properties have been shipped for translation.
 # ==============================================================================
+pluginName = Claim Model
+providerName = www.example.org
