--- a/plugins/org.eclipse.emf.teneo.annotations/plugin.properties
+++ b/plugins/org.eclipse.emf.teneo.annotations/plugin.properties
@@ -12,7 +12,7 @@
 # *
 # * </copyright>
 # *
-# * $Id: plugin.properties,v 1.5 2007/11/20 10:04:51 mtaal Exp $
+# * $Id: plugin.properties,v 1.6 2008/01/18 06:20:57 mtaal Exp $
 # */
 
 # NLS_MESSAGEFORMAT_VAR
@@ -31,3 +31,5 @@ Plugin.providerName = Eclipse.org
 # %%% END OF TRANSLATED PROPERTIES %%%
 # The above properties have been shipped for translation.
 # ==============================================================================
+pluginName = Pannotation Model
+providerName = www.example.org
