--- a/plugins/org.eclipse.emf.teneo.hibernate.mapper/plugin.properties
+++ b/plugins/org.eclipse.emf.teneo.hibernate.mapper/plugin.properties
@@ -13,7 +13,7 @@
 # *
 # * </copyright>
 # *
-# * $Id: plugin.properties,v 1.4 2007/11/20 10:04:46 mtaal Exp $
+# * $Id: plugin.properties,v 1.5 2008/01/18 06:21:37 mtaal Exp $
 # */
 
 # NLS_MESSAGEFORMAT_VAR
@@ -32,3 +32,5 @@ Plugin.providerName = Eclipse.org
 # %%% END OF TRANSLATED PROPERTIES %%%
 # The above properties have been shipped for translation.
 # ==============================================================================
+pluginName = Hbannotation Model
+providerName = www.example.org
