--- a/tests/org.eclipse.emf.teneo.jpox.libraries/.classpath
+++ b/tests/org.eclipse.emf.teneo.jpox.libraries/.classpath
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry exported="true" kind="lib" path="xerces-2.6.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="jpox-1.1.8.jar"/>
 	<classpathentry exported="true" kind="lib" path="jpox-enhancer-1.1.8.jar"/>
 	<classpathentry exported="true" kind="lib" path="bcel-5.1.jar"/>
