--- a/tests/org.eclipse.emf.teneo.jpox.libraries/build.properties
+++ b/tests/org.eclipse.emf.teneo.jpox.libraries/build.properties
@@ -9,6 +9,7 @@ bin.includes = bcel-5.1.jar,\
                jpox-dbcp-1.1.3.jar,\
                log4j-1.2.13.jar,\
                jpox-1.1.8.jar,\
-               jpox-enhancer-1.1.8.jar
+               jpox-enhancer-1.1.8.jar,\
+               xerces-2.6.2.jar
 javacSource=1.5
 javacTarget=1.5
