--- a/tests/org.eclipse.emf.teneo.hibernate.libraries/build.properties
+++ b/tests/org.eclipse.emf.teneo.hibernate.libraries/build.properties
@@ -4,12 +4,10 @@ bin.includes = META-INF/,\
                antlr-2.7.6.jar,\
                asm.jar,\
                asm-attrs.jar,\
-               c3p0-0.9.0.jar,\
                cglib-2.1.3.jar,\
                commons-collections-2.1.1.jar,\
                commons-logging-1.0.4.jar,\
                dom4j-1.6.1.jar,\
-               ehcache-1.2.jar,\
                ejb3-persistence.jar,\
                hibernate3.jar,\
                hibernate-annotations.jar,\
@@ -17,7 +15,6 @@ bin.includes = META-INF/,\
                javassist.jar,\
                jboss-archive-browsing.jar,\
                jta.jar,\
-               lucene-1.4.3.jar,\
                ant-1.6.5.jar,\
                ant-junit-1.6.5.jar,\
                ant-launcher-1.6.5.jar,\
@@ -44,17 +41,20 @@ bin.includes = META-INF/,\
                versioncheck.jar,\
                xerces-2.6.2.jar,\
                xml-apis.jar,\
-               hibernate-commons-annotations.jar
+               hibernate-commons-annotations.jar,\
+               c3p0-0.9.1.jar,\
+               ehcache-1.2.3.jar,\
+               jms.jar,\
+               lucene-core-2.2.0.jar
 jars.extra.classpath = ant-antlr-1.6.5.jar,\
                        antlr-2.7.6.jar,\
                        asm.jar,\
                        asm-attrs.jar,\
-                       c3p0-0.9.0.jar,\
+                       c3p0-0.9.1.jar,\
                        cglib-2.1.3.jar,\
                        commons-collections-2.1.1.jar,\
                        commons-logging-1.0.4.jar,\
                        dom4j-1.6.1.jar,\
-                       ehcache-1.2.jar,\
                        ejb3-persistence.jar,\
                        hibernate3.jar,\
                        hibernate-annotations.jar,\
@@ -62,7 +62,6 @@ jars.extra.classpath = ant-antlr-1.6.5.jar,\
                        javassist.jar,\
                        jboss-archive-browsing.jar,\
                        jta.jar,\
-                       lucene-1.4.3.jar,\
                        ant-1.6.5.jar,\
                        ant-junit-1.6.5.jar,\
                        ant-launcher-1.6.5.jar,\
@@ -88,6 +87,10 @@ jars.extra.classpath = ant-antlr-1.6.5.jar,\
                        syndiag2.jar,\
                        versioncheck.jar,\
                        xerces-2.6.2.jar,\
-                       xml-apis.jar
+                       xml-apis.jar,\
+                       ehcache-1.2.3.jar,\
+                       hibernate-commons-annotations.jar,\
+                       jms.jar,\
+                       lucene-core-2.2.0.jar
 javacSource=1.5
 javacTarget=1.5
