--- a/tests/org.eclipse.emf.teneo.jpox.test/src/emft_test.properties
+++ b/tests/org.eclipse.emf.teneo.jpox.test/src/emft_test.properties
@@ -1,6 +1,6 @@
 # <copyright>
 #
-# Copyright (c) 2005, 2006, 2007 Springsite BV (The Netherlands) and others
+# Copyright (c) 2005, 2006, 2007, 2008 Springsite BV (The Netherlands) and others
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License v1.0
 # which accompanies this distribution, and is available at
@@ -10,7 +10,7 @@
 #   Martin Taal
 # </copyright>
 #
-# $Id: emft_test.properties,v 1.8 2007/02/01 12:34:05 mtaal Exp $
+# $Id: emft_test.properties,v 1.9 2008/02/28 07:07:34 mtaal Exp $
 
 # <cfgname>.dbadapter= name of a dbadapter (see dbadapters.properties)
 # <cfgname>.mapstrategy= mapping strategy, either AllInOne or TablePerClass 
