--- a/examples/org.eclipse.emf.teneo.samples/plugin.properties
+++ b/examples/org.eclipse.emf.teneo.samples/plugin.properties
@@ -1,7 +1,7 @@
 #/**
 # * <copyright>
 # *
-# * Copyright (c) 2005, 2006, 2007 Springsite BV (The Netherlands) and others
+# * Copyright (c) 2005, 2006, 2007, 2008 Springsite BV (The Netherlands) and others
 # * All rights reserved. This program and the accompanying materials
 # * are made available under the terms of the Eclipse Public License v1.0
 # * which accompanies this distribution, and is available at
@@ -12,7 +12,7 @@
 # *
 # * </copyright>
 # *
-# * $Id: plugin.properties,v 1.5 2007/12/13 06:52:44 mtaal Exp $
+# * $Id: plugin.properties,v 1.6 2008/02/28 07:08:07 mtaal Exp $
 # */
 
 # NLS_MESSAGEFORMAT_VAR
