--- a/tests/org.eclipse.emf.teneo.hibernate.test/plugin.properties
+++ b/tests/org.eclipse.emf.teneo.hibernate.test/plugin.properties
@@ -1,7 +1,7 @@
 #/**
 # * <copyright>
 # *
-# * Copyright (c) 2005, 2006, 2007 Springsite BV (The Netherlands) and others
+# * Copyright (c) 2005, 2006, 2007, 2008 Springsite BV (The Netherlands) and others
 # * All rights reserved. This program and the accompanying materials
 # * are made available under the terms of the Eclipse Public License v1.0
 # * which accompanies this distribution, and is available at
@@ -13,7 +13,7 @@
 # *
 # * </copyright>
 # *
-# * $Id: plugin.properties,v 1.7 2008/01/18 06:20:02 mtaal Exp $
+# * $Id: plugin.properties,v 1.8 2008/02/28 07:08:57 mtaal Exp $
 # */
 
 # NLS_MESSAGEFORMAT_VAR
