--- a/tests/org.eclipse.emf.teneo.hibernate.test/src/dbadapters.properties
+++ b/tests/org.eclipse.emf.teneo.hibernate.test/src/dbadapters.properties
@@ -1,6 +1,6 @@
 # <copyright>
 #
-# Copyright (c) 2005, 2006, 2007 Springsite BV (The Netherlands) and others
+# Copyright (c) 2005, 2006, 2007, 2008 Springsite BV (The Netherlands) and others
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License v1.0
 # which accompanies this distribution, and is available at
@@ -10,7 +10,7 @@
 #   Martin Taal
 # </copyright>
 #
-# $Id: dbadapters.properties,v 1.6 2007/02/01 12:36:23 mtaal Exp $
+# $Id: dbadapters.properties,v 1.7 2008/02/28 07:08:57 mtaal Exp $
 
 # used to set database connection props in the test classes
 
