--- a/plugins/org.eclipse.emf.teneo.annotations/about.properties
+++ b/plugins/org.eclipse.emf.teneo.annotations/about.properties
@@ -1,7 +1,7 @@
 #/**
 # * <copyright>
 # *
-# * Copyright (c) 2005, 2006, 2007 Springsite BV (The Netherlands) and others
+# * Copyright (c) 2005, 2006, 2007, 2008 Springsite BV (The Netherlands) and others
 # * All rights reserved. This program and the accompanying materials
 # * are made available under the terms of the Eclipse Public License v1.0
 # * which accompanies this distribution, and is available at
@@ -12,7 +12,7 @@
 # *
 # * </copyright>
 # *
-# * $Id: about.properties,v 1.2 2007/02/01 12:35:02 mtaal Exp $
+# * $Id: about.properties,v 1.3 2008/02/28 07:09:11 mtaal Exp $
 # */
 
 # NLS_MESSAGEFORMAT_VAR
