--- a/plugins/org.eclipse.emf.teneo.hibernate.eclipse/plugin.xml
+++ b/plugins/org.eclipse.emf.teneo.hibernate.eclipse/plugin.xml
@@ -139,5 +139,47 @@
                menubarPath="org.eclipse.emf.teneo.hibernate.eclipse.teneomenu/group3"
                tooltip="Exports a complete datastore to xml"/>
       </objectContribution>
+      <objectContribution
+            id="org.eclipse.emf.teneo.hibernate.eclipse.contribution0"
+            nameFilter="*.ecore"
+            objectClass="org.eclipse.core.resources.IFile">
+         <menu
+               label="Teneo"
+               path="additions"
+               id="org.eclipse.emf.teneo.eclipse.teneomenu">
+            <separator
+                  name="group4">
+            </separator>
+         </menu>
+         <action
+               class="org.eclipse.emf.teneo.hibernate.eclipse.CDOGenerateHBMAction"
+               enablesFor="+"
+               id="org.eclipse.emf.teneo.hibernate.eclipse.generatehbm"
+               label="Generate CDO - Hibernate OR Mapping (joined-subclass)"
+               menubarPath="org.eclipse.emf.teneo.eclipse.teneomenu/group4"
+               tooltip="Select to generate a hibernate.hbm.xml file from the ecore model(s) for use in a CDO server. Uses joined-subclass inheritance mapping strategy.">
+         </action>
+      </objectContribution>
+      <objectContribution
+            id="org.eclipse.emf.teneo.hibernate.eclipse.contribution1"
+            nameFilter="*.ecore"
+            objectClass="org.eclipse.core.resources.IFile">
+         <menu
+               label="Teneo"
+               path="additions"
+               id="org.eclipse.emf.teneo.eclipse.teneomenu">
+            <separator
+                  name="group4">
+            </separator>
+         </menu>
+         <action
+               class="org.eclipse.emf.teneo.hibernate.eclipse.CDOGenerateHBMActionSuperClass"
+               enablesFor="+"
+               id="org.eclipse.emf.teneo.hibernate.eclipse.generatehbmsuperclass"
+               label="Generate CDO - Hibernate OR Mapping (super-class)"
+               menubarPath="org.eclipse.emf.teneo.eclipse.teneomenu/group4"
+               tooltip="Select to generate a hibernate.hbm.xml file from the ecore model(s) for use in a cdo server. Uses superclass-table inheritance mapping strategy.">
+         </action>
+      </objectContribution>
    </extension>
 </plugin>
