--- a/tests/org.eclipse.emf.teneo.hibernate.test/src/dbadapters.properties
+++ b/tests/org.eclipse.emf.teneo.hibernate.test/src/dbadapters.properties
@@ -10,7 +10,7 @@
 #   Martin Taal
 # </copyright>
 #
-# $Id: dbadapters.properties,v 1.7 2008/02/28 07:08:57 mtaal Exp $
+# $Id: dbadapters.properties,v 1.8 2008/03/30 15:11:58 mtaal Exp $
 
 # used to set database connection props in the test classes
 
@@ -55,13 +55,20 @@ mcssql.dbadapter=org.eclipse.emf.teneo.hibernate.test.stores.adapters.HibernateM
 #mcssql.dbdriver=com.microsoft.jdbc.sqlserver.SQLServerDriver
 #mcssql.dbadapter=org.eclipse.emf.teneo.hibernate.test.stores.adapters.HibernateMcssqlDBAdapter
 
-# derby and hsqldb are to be tested further because of db specifics
-hsqldb.dburl=jdbc:hsqldb:file:/temp/run/testdb
+# note that the patt /tmp/hsqldb is hardcode in a number of places in the sourcode also
+hsqldb.dburl=jdbc:hsqldb:file:/tmp/hsqldb
 hsqldb.dbattachdatabase=true
 hsqldb.dbuser=sa
 hsqldb.dbpassword=
 hsqldb.dbdriver=org.hsqldb.jdbcDriver
 hsqldb.dbadapter=org.eclipse.emf.teneo.hibernate.test.stores.adapters.HibernateHsqlDBAdapter
+
+hsqldbmem.dburl=jdbc:hsqldb:mem:
+hsqldbmem.dbattachdatabase=true
+hsqldbmem.dbuser=sa
+hsqldbmem.dbpassword=
+hsqldbmem.dbdriver=org.hsqldb.jdbcDriver
+hsqldbmem.dbadapter=org.eclipse.emf.teneo.hibernate.test.stores.adapters.HibernateHsqlDBAdapter
 
 #derby.dburl=jdbc:derby://localhost:1527/
 #derby.dbattachdatabase=true
