--- a/tests/org.eclipse.emf.teneo.hibernate.test/src/emft_test.properties
+++ b/tests/org.eclipse.emf.teneo.hibernate.test/src/emft_test.properties
@@ -10,7 +10,7 @@
 #   Martin Taal
 # </copyright>
 #
-# $Id: emft_test.properties,v 1.5 2008/02/28 07:08:57 mtaal Exp $
+# $Id: emft_test.properties,v 1.6 2008/03/30 15:11:58 mtaal Exp $
 
 
 # <cfgname>.dbadapter= name of a dbadapter (see dbadapters.properties)
@@ -25,6 +25,10 @@ mysql_e_o.ejb3=true
 mysql_e_o.dbadapter=mysql
 mysql_e_o.mapstrategy=JOINED
 mysql_e_o.optimistic=true
+
+hsqldb_h_o.dbadapter=hsqldbmem
+hsqldb_h_o.mapstrategy=SINGLE_TABLE
+hsqldb_h_o.optimistic=true
 
 #pgsql_a_o.dbadapter=pgsql
 #pgsql_a_o.mapstrategy=SINGLE_TABLE
