--- a/tests/org.eclipse.emf.teneo.hibernate.test/src/local_test.properties
+++ b/tests/org.eclipse.emf.teneo.hibernate.test/src/local_test.properties
@@ -10,7 +10,7 @@
 #   Martin Taal
 # </copyright>
 #
-# $Id: local_test.properties,v 1.7 2008/02/28 07:08:57 mtaal Exp $
+# $Id: local_test.properties,v 1.8 2008/03/30 15:11:58 mtaal Exp $
 
 
 # <cfgname>.dbadapter= name of a dbadapter (see dbadapters.properties)
@@ -39,6 +39,19 @@ mysql_xjoin.dbadapter=mysql
 mysql_xjoin.mapstrategy=JOINED
 mysql_xjoin.optimistic=true
 mysql_xjoin.xml=true
+
+hsqldb_h_o.dbadapter=hsqldbmem
+hsqldb_h_o.mapstrategy=SINGLE_TABLE
+hsqldb_h_o.optimistic=true
+
+#hsqldb_a_o.dbadapter=hsqldb
+#hsqldb_a_o.mapstrategy=SINGLE_TABLE
+#hsqldb_a_o.optimistic=true
+
+#hsqldb_e_o.ejb3=true
+#hsqldb_e_o.dbadapter=hsqldb
+#hsqldb_e_o.mapstrategy=JOINED
+#hsqldb_e_o.optimistic=true
 
 #pgsql_a_o.dbadapter=pgsql
 #pgsql_a_o.mapstrategy=SINGLE_TABLE
