--- a/tests/org.eclipse.emf.teneo.hibernate.libraries/build.properties
+++ b/tests/org.eclipse.emf.teneo.hibernate.libraries/build.properties
@@ -45,7 +45,8 @@ bin.includes = META-INF/,\
                c3p0-0.9.1.jar,\
                ehcache-1.2.3.jar,\
                jms.jar,\
-               lucene-core-2.2.0.jar
+               lucene-core-2.2.0.jar,\
+               hsqldb.jar
 jars.extra.classpath = ant-antlr-1.6.5.jar,\
                        antlr-2.7.6.jar,\
                        asm.jar,\
