--- a/tests/org.eclipse.emf.teneo.hibernate.test/build.properties
+++ b/tests/org.eclipse.emf.teneo.hibernate.test/build.properties
@@ -1,7 +1,7 @@
 # <copyright>
 # </copyright>
 #
-# $Id: build.properties,v 1.17 2007/11/14 19:20:34 mtaal Exp $
+# $Id: build.properties,v 1.18 2008/04/06 13:45:11 mtaal Exp $
 
 bin.includes = .,\
                META-INF/,\
@@ -13,7 +13,8 @@ bin.includes = .,\
                test.xml,\
                src/org/eclipse/emf/teneo/hibernate/test/emf/test.hbm.xml,\
                src/org/eclipse/emf/teneo/hibernate/test/test.persistence.xml,\
-               src/org/eclipse/emf/teneo/hibernate/test/emf/test2.hbm.xml
+               src/org/eclipse/emf/teneo/hibernate/test/emf/test2.hbm.xml,\
+               src/org/eclipse/emf/teneo/hibernate/test/ops_persistence.xml
 jars.compile.order = .
 source.. = src/
 output.. = bin/
