--- a/plugins/org.eclipse.emf.teneo.sdk-feature/feature.properties
+++ b/plugins/org.eclipse.emf.teneo.sdk-feature/feature.properties
@@ -12,7 +12,7 @@
 #  *
 #  * </copyright>
 #  *
-#  * $Id: feature.properties,v 1.2 2006/10/04 13:26:48 mtaal Exp $
+#  * $Id: feature.properties,v 1.3 2008/04/17 19:27:47 mtaal Exp $
 #  */
 
 # NLS_MESSAGEFORMAT_VAR
@@ -35,7 +35,7 @@
 # ==============================================================================
 
 # "featureName" property - name of the feature
-featureName=Teneo EMF Persistence SDK
+featureName=Teneo EMF Persistence SDK (Incubation)
 
 # "providerName" property - name of the company that provides the feature
 providerName=Eclipse.org
