--- a/plugins/org.eclipse.emf.teneo-feature/feature.properties
+++ b/plugins/org.eclipse.emf.teneo-feature/feature.properties
@@ -11,7 +11,7 @@
 #  *   Martin Taal
 #  * </copyright>
 #  *
-#  * $Id: feature.properties,v 1.3 2006/10/16 20:57:28 mtaal Exp $
+#  * $Id: feature.properties,v 1.4 2008/04/17 19:27:48 mtaal Exp $
 #  */
 
 # NLS_MESSAGEFORMAT_VAR
@@ -29,7 +29,7 @@
 # This file should be translated.
 
 # "featureName" property - name of the feature
-featureName=Teneo EMF Persistence Runtime
+featureName=Teneo EMF Persistence Runtime (Incubation)
 
 # "providerName" property - name of the company that provides the feature
 providerName=Eclipse.org
