--- a/plugins/org.eclipse.emf.teneo.sdk-feature/feature.properties
+++ b/plugins/org.eclipse.emf.teneo.sdk-feature/feature.properties
@@ -12,7 +12,7 @@
 #  *
 #  * </copyright>
 #  *
-#  * $Id: feature.properties,v 1.3 2008/04/17 19:27:47 mtaal Exp $
+#  * $Id: feature.properties,v 1.4 2008/04/23 23:18:57 mtaal Exp $
 #  */
 
 # NLS_MESSAGEFORMAT_VAR
@@ -44,7 +44,7 @@ providerName=Eclipse.org
 updateSiteName=Eclipse.org update site
 
 # "description" property - description of the feature
-description=Binaries and API documentation and source zips for EMFT Teneo.
+description=Binaries and API documentation and source zips for EMFT Teneo (Incubation).
 
 # "licenseURL" property - URL of the "Feature License"
 # do not translate value - just change to point to a locale-specific HTML page
