Added ignore jar signing for specific plugins

--- a/plugins/org.eclipse.emf.teneo.hibernate/build.properties
+++ b/plugins/org.eclipse.emf.teneo.hibernate/build.properties
@@ -13,10 +13,10 @@ bin.includes = plugin.xml,\
 src.includes = about.html,\
                epl-v10.html,\
                copyright.txt
-jars.extra.classpath = dom4j-1.6.1.jar,\
-                       hibernate3.jar,\
-                       ejb3-persistence.jar,\
-                       hibernate-annotations.jar,\
-                       hibernate-entitymanager.jar
+jars.extra.classpath = platform:/plugin/org.eclipse.emf.teneo.hibernate.libraries/dom4j-1.6.1.jar,\
+                       platform:/plugin/org.eclipse.emf.teneo.hibernate.libraries/hibernate3.jar,\
+                       platform:/plugin/org.eclipse.emf.teneo.hibernate.libraries/hibernate-annotations.jar,\
+                       platform:/plugin/org.eclipse.emf.teneo.hibernate.libraries/hibernate-entitymanager.jar,\
+                       platform:/plugin/org.eclipse.emf.teneo.hibernate.libraries/ejb3-persistence.jar
 javacSource=1.5
 javacTarget=1.5
