--- a/plugins/org.eclipse.emf.teneo.jpox/build.properties
+++ b/plugins/org.eclipse.emf.teneo.jpox/build.properties
@@ -13,7 +13,7 @@ src.includes = about.html,\
                epl-v10.html,\
                copyright.txt
 source.org.eclipse.emf.teneo.jpox.jar = src/
-jars.extra.classpath = jdo2-api-2.0.jar,\
-                       jpox-1.1.9.jar
+jars.extra.classpath = platform:/plugin/org.eclipse.emf.teneo.jpox.libraries/jdo2-api-2.0.jar,\
+                       platform:/plugin/org.eclipse.emf.teneo.jpox.libraries/jpox-1.1.9.jar
 javacSource=1.5
 javacTarget=1.5
