Set 1.0.0 and removed incubation

--- a/plugins/org.eclipse.emf.teneo.sdk-feature/feature.properties
+++ b/plugins/org.eclipse.emf.teneo.sdk-feature/feature.properties
@@ -12,7 +12,7 @@
 #  *
 #  * </copyright>
 #  *
-#  * $Id: feature.properties,v 1.4 2008/04/23 23:18:57 mtaal Exp $
+#  * $Id: feature.properties,v 1.5 2008/05/22 18:18:01 mtaal Exp $
 #  */
 
 # NLS_MESSAGEFORMAT_VAR
@@ -35,7 +35,7 @@
 # ==============================================================================
 
 # "featureName" property - name of the feature
-featureName=Teneo EMF Persistence SDK (Incubation)
+featureName=Teneo EMF Persistence SDK
 
 # "providerName" property - name of the company that provides the feature
 providerName=Eclipse.org
@@ -44,7 +44,7 @@ providerName=Eclipse.org
 updateSiteName=Eclipse.org update site
 
 # "description" property - description of the feature
-description=Binaries and API documentation and source zips for EMFT Teneo (Incubation).
+description=Binaries and API documentation and source zips for EMFT Teneo.
 
 # "licenseURL" property - URL of the "Feature License"
 # do not translate value - just change to point to a locale-specific HTML page
