--- a/plugins/org.eclipse.emf.teneo.sdk-feature/sourceTemplatePlugin/plugin.properties
+++ b/plugins/org.eclipse.emf.teneo.sdk-feature/sourceTemplatePlugin/plugin.properties
@@ -12,7 +12,7 @@
 #  *
 #  * </copyright>
 #  *
-#  * $Id: plugin.properties,v 1.2 2007/11/20 10:11:56 mtaal Exp $
+#  * $Id: plugin.properties,v 1.3 2008/05/22 18:18:01 mtaal Exp $
 #  */
 
 # NLS_MESSAGEFORMAT_VAR
@@ -24,7 +24,7 @@
 # append it to the end of the file, and change the code to use the new name.
 # ==============================================================================
 
-pluginName=Teneo Source (Incubation)
+pluginName=Teneo Source
 providerName=Eclipse.org
 
 # ==============================================================================
