--- a/tests/org.eclipse.emf.teneo.tests-feature/feature.properties
+++ b/tests/org.eclipse.emf.teneo.tests-feature/feature.properties
@@ -30,7 +30,7 @@
 # This file should be translated.
 
 # "featureName" property - name of the feature
-featureName=Teneo EMF Persistence Test (Incubation)
+featureName=Teneo EMF Persistence Test
 
 # "providerName" property - name of the company that provides the feature
 providerName=Eclipse.org
