Set 1.0.0 and removed incubation

--- a/plugins/org.eclipse.emf.teneo.all-feature/feature.properties
+++ b/plugins/org.eclipse.emf.teneo.all-feature/feature.properties
@@ -10,7 +10,7 @@
 #############################################################################
 
 # "featureName" property - name of the feature
-featureName=Teneo All-In-One Feature (Incubation)
+featureName=Teneo All-In-One Feature
 
 # "providerName" property - name of the company that provides the feature
 providerName=Eclipse.org
@@ -19,7 +19,7 @@ providerName=Eclipse.org
 updateSiteName=Eclipse Modeling Framework Technologies (EMFT) Updates
 
 # "description" property - description of the feature
-description=Teneo All-In-One Feature includes runtime, source code and code examples (Incubation)
+description=Teneo All-In-One Feature includes runtime, source code and code examples
 
 # "licenseURL" property - URL of the "Feature License"
 # do not translate value - just change to point to a locale-specific HTML page
