--- a/tests/org.eclipse.emf.teneo.jpox.libraries/plugin.properties
+++ b/tests/org.eclipse.emf.teneo.jpox.libraries/plugin.properties
@@ -13,7 +13,7 @@
 # *
 # * </copyright>
 # *
-# * $Id: plugin.properties,v 1.2 2008/02/28 07:08:04 mtaal Exp $
+# * $Id: plugin.properties,v 1.3 2008/05/22 18:18:35 mtaal Exp $
 # */
 
 # NLS_MESSAGEFORMAT_VAR
@@ -25,7 +25,7 @@
 # append it to the end of the file, and change the code to use the new name.
 # ==============================================================================
 
-Plugin.name = Teneo JPOX Libraries (Incubation)
+Plugin.name = Teneo JPOX Libraries
 Plugin.providerName = Eclipse.org
 
 # ==============================================================================
