--- a/examples/org.eclipse.emf.teneo.samples/plugin.properties
+++ b/examples/org.eclipse.emf.teneo.samples/plugin.properties
@@ -12,7 +12,7 @@
 # *
 # * </copyright>
 # *
-# * $Id: plugin.properties,v 1.6 2008/02/28 07:08:07 mtaal Exp $
+# * $Id: plugin.properties,v 1.7 2008/05/22 18:18:38 mtaal Exp $
 # */
 
 # NLS_MESSAGEFORMAT_VAR
@@ -24,7 +24,7 @@
 # append it to the end of the file, and change the code to use the new name.
 # ==============================================================================
 
-Plugin.name = Teneo (Incubation)
+Plugin.name = Teneo
 Plugin.providerName = Eclipse.org
 
 # ==============================================================================
