--- a/tests/org.eclipse.emf.teneo.commontest/plugin.properties
+++ b/tests/org.eclipse.emf.teneo.commontest/plugin.properties
@@ -13,7 +13,7 @@
 # *
 # * </copyright>
 # *
-# * $Id: plugin.properties,v 1.4 2008/02/28 07:08:16 mtaal Exp $
+# * $Id: plugin.properties,v 1.5 2008/05/22 18:19:48 mtaal Exp $
 # */
 
 # NLS_MESSAGEFORMAT_VAR
@@ -25,7 +25,7 @@
 # append it to the end of the file, and change the code to use the new name.
 # ==============================================================================
 
-Plugin.name = Teneo Test Framework/CommonTest (Incubation)
+Plugin.name = Teneo Test Framework/CommonTest
 Plugin.providerName = Eclipse.org
 
 # ==============================================================================
