--- a/plugins/org.eclipse.emf.teneo.hibernate/plugin.properties
+++ b/plugins/org.eclipse.emf.teneo.hibernate/plugin.properties
@@ -13,7 +13,7 @@
 # *
 # * </copyright>
 # *
-# * $Id: plugin.properties,v 1.7 2008/02/28 07:08:24 mtaal Exp $
+# * $Id: plugin.properties,v 1.8 2008/05/22 18:19:49 mtaal Exp $
 # */
 
 # NLS_MESSAGEFORMAT_VAR
@@ -25,7 +25,7 @@
 # append it to the end of the file, and change the code to use the new name.
 # ==============================================================================
 
-Plugin.name = Teneo Hibernate (Incubation)
+Plugin.name = Teneo Hibernate
 Plugin.providerName = Eclipse.org
 
 # ==============================================================================
