--- a/plugins/org.eclipse.emf.teneo.annotations/plugin.properties
+++ b/plugins/org.eclipse.emf.teneo.annotations/plugin.properties
@@ -12,7 +12,7 @@
 # *
 # * </copyright>
 # *
-# * $Id: plugin.properties,v 1.7 2008/02/28 07:09:11 mtaal Exp $
+# * $Id: plugin.properties,v 1.8 2008/05/22 18:19:50 mtaal Exp $
 # */
 
 # NLS_MESSAGEFORMAT_VAR
@@ -24,7 +24,7 @@
 # append it to the end of the file, and change the code to use the new name.
 # ==============================================================================
 
-Plugin.name = Teneo Annotations (Incubation)
+Plugin.name = Teneo Annotations
 Plugin.providerName = Eclipse.org
 
 # ==============================================================================
