--- a/tests/org.eclipse.emf.teneo.hibernate.test/plugin.properties
+++ b/tests/org.eclipse.emf.teneo.hibernate.test/plugin.properties
@@ -13,7 +13,7 @@
 # *
 # * </copyright>
 # *
-# * $Id: plugin.properties,v 1.8 2008/02/28 07:08:57 mtaal Exp $
+# * $Id: plugin.properties,v 1.9 2008/05/22 18:20:17 mtaal Exp $
 # */
 
 # NLS_MESSAGEFORMAT_VAR
@@ -25,7 +25,7 @@
 # append it to the end of the file, and change the code to use the new name.
 # ==============================================================================
 
-Plugin.name = Teneo Hibernate Test (Incubation)
+Plugin.name = Teneo Hibernate Test
 Plugin.providerName = Eclipse.org
 
 # ==============================================================================
