--- a/plugins/org.eclipse.emf.teneo.hibernate.eclipse/plugin.properties
+++ b/plugins/org.eclipse.emf.teneo.hibernate.eclipse/plugin.properties
@@ -12,7 +12,7 @@
 # *
 # * </copyright>
 # *
-# * $Id: plugin.properties,v 1.4 2008/02/28 07:07:59 mtaal Exp $
+# * $Id: plugin.properties,v 1.5 2008/05/22 18:20:18 mtaal Exp $
 # */
 
 # NLS_MESSAGEFORMAT_VAR
@@ -24,7 +24,7 @@
 # append it to the end of the file, and change the code to use the new name.
 # ==============================================================================
 
-Plugin.name = Teneo Hibernate Eclipse UI (Incubation)
+Plugin.name = Teneo Hibernate Eclipse UI
 Plugin.providerName = Eclipse.org
 
 # ==============================================================================
