--- a/plugins/org.eclipse.emf.teneo.hibernate/build.properties
+++ b/plugins/org.eclipse.emf.teneo.hibernate/build.properties
@@ -9,7 +9,8 @@ bin.includes = plugin.xml,\
                about.properties,\
                copyright.txt,\
                .,\
-               about.html
+               about.html,\
+               org.eclipse.emf.teneo.hibernate.extra.jar
 src.includes = about.html,\
                epl-v10.html,\
                copyright.txt
