--- a/plugins/org.eclipse.emf.teneo.hibernate/build.properties
+++ b/plugins/org.eclipse.emf.teneo.hibernate/build.properties
@@ -8,9 +8,9 @@ bin.includes = plugin.xml,\
                about.ini,\
                about.properties,\
                copyright.txt,\
-               .,\
                about.html,\
-               org.eclipse.emf.teneo.hibernate.extra.jar
+               org.eclipse.emf.teneo.hibernate.extra.jar,\
+               org.eclipse.emf.teneo.hibernate.jar
 src.includes = about.html,\
                epl-v10.html,\
                copyright.txt
