--- a/plugins/org.eclipse.emf.teneo.hibernate/build.properties
+++ b/plugins/org.eclipse.emf.teneo.hibernate/build.properties
@@ -1,5 +1,4 @@
-source.. = src/
-output.. = bin/
+source.org.eclipse.emf.teneo.hibernate.jar = src/
 bin.includes = plugin.xml,\
                plugin.properties,\
                META-INF/,\
@@ -9,8 +8,7 @@ bin.includes = plugin.xml,\
                about.properties,\
                copyright.txt,\
                about.html,\
-               org.eclipse.emf.teneo.hibernate.extra.jar,\
-               org.eclipse.emf.teneo.hibernate.jar
+               org.eclipse.emf.teneo.hibernate.extra.jar
 src.includes = about.html,\
                epl-v10.html,\
                copyright.txt
@@ -18,7 +16,7 @@ jars.extra.classpath = platform:/plugin/org.eclipse.emf.teneo.hibernate.librarie
                        platform:/plugin/org.eclipse.emf.teneo.hibernate.libraries/hibernate3.jar,\
                        platform:/plugin/org.eclipse.emf.teneo.hibernate.libraries/hibernate-annotations.jar,\
                        platform:/plugin/org.eclipse.emf.teneo.hibernate.libraries/hibernate-entitymanager.jar,\
-                       platform:/plugin/org.eclipse.emf.teneo.hibernate.libraries/ejb3-persistence.jar,\
-                       org.eclipse.emf.teneo.hibernate.extra.jar
+                       platform:/plugin/org.eclipse.emf.teneo.hibernate.libraries/ejb3-persistence.jar
 javacSource=1.5
 javacTarget=1.5
+jars.compile.order = org.eclipse.emf.teneo.hibernate.jar
