Updated build path

--- a/plugins/org.eclipse.emf.teneo.hibernate/build.properties
+++ b/plugins/org.eclipse.emf.teneo.hibernate/build.properties
@@ -16,7 +16,8 @@ jars.extra.classpath = platform:/plugin/org.eclipse.emf.teneo.hibernate.librarie
                        platform:/plugin/org.eclipse.emf.teneo.hibernate.libraries/hibernate3.jar,\
                        platform:/plugin/org.eclipse.emf.teneo.hibernate.libraries/hibernate-annotations.jar,\
                        platform:/plugin/org.eclipse.emf.teneo.hibernate.libraries/hibernate-entitymanager.jar,\
-                       platform:/plugin/org.eclipse.emf.teneo.hibernate.libraries/ejb3-persistence.jar
+                       platform:/plugin/org.eclipse.emf.teneo.hibernate.libraries/ejb3-persistence.jar,\
+                       org.eclipse.emf.teneo.hibernate.extra.jar
 javacSource=1.5
 javacTarget=1.5
 jars.compile.order = org.eclipse.emf.teneo.hibernate.jar
