--- a/examples/org.eclipse.emf.teneo.tutorial/build.properties
+++ b/examples/org.eclipse.emf.teneo.tutorial/build.properties
@@ -2,13 +2,19 @@
 # <copyright>
 # </copyright>
 #
-# $Id: build.properties,v 1.10 2007/11/19 19:23:56 mtaal Exp $
+# $Id: build.properties,v 1.11 2008/06/07 21:50:39 mtaal Exp $
 
 bin.includes = .,\
                model/,\
                META-INF/,\
                plugin.xml,\
-               plugin.properties
+               plugin.properties,\
+               about.html,\
+               about.ini,\
+               about.properties,\
+               copyright.txt,\
+               epl-v10.html,\
+               modeling32.png
 jars.compile.order = .
 source.. = src/
 output.. = bin/
