Added license files

--- a/tests/org.eclipse.emf.teneo.hibernate.libraries/build.properties
+++ b/tests/org.eclipse.emf.teneo.hibernate.libraries/build.properties
@@ -46,7 +46,13 @@ bin.includes = META-INF/,\
                ehcache-1.2.3.jar,\
                jms.jar,\
                lucene-core-2.2.0.jar,\
-               hsqldb.jar
+               hsqldb.jar,\
+               about.html,\
+               copyright.txt,\
+               epl-v10.html,\
+               license.html,\
+               modeling32.png,\
+               plugin.properties
 jars.extra.classpath = ant-antlr-1.6.5.jar,\
                        antlr-2.7.6.jar,\
                        asm.jar,\
