Added license files

--- a/tests/org.eclipse.emf.teneo.jpox.libraries/build.properties
+++ b/tests/org.eclipse.emf.teneo.jpox.libraries/build.properties
@@ -9,6 +9,12 @@ bin.includes = bcel-5.1.jar,\
                jpox-dbcp-1.1.3.jar,\
                log4j-1.2.13.jar,\
                jpox-1.1.9.jar,\
-               jpox-enhancer-1.1.9.jar
+               jpox-enhancer-1.1.9.jar,\
+               about.html,\
+               copyright.txt,\
+               epl-v10.html,\
+               license.html,\
+               modeling32.png,\
+               plugin.properties
 javacSource=1.5
 javacTarget=1.5
