--- a/tests/org.eclipse.emf.teneo.commontest/src/log4j.properties
+++ b/tests/org.eclipse.emf.teneo.commontest/src/log4j.properties
@@ -38,7 +38,7 @@ log4j.logger.org.hibernate.type=error
 #log4j.logger.org.hibernate.type=error
 
 ### log schema export/update ###
-log4j.logger.org.hibernate.tool.hbm2ddl=error
+log4j.logger.org.hibernate.tool.hbm2ddl=debug
 
 ### log HQL parse trees
 log4j.logger.org.hibernate.hql=error
