--- a/examples/org.eclipse.emf.teneo.eclipselink.examples.library/.settings/org.eclipse.core.resources.prefs
+++ b/examples/org.eclipse.emf.teneo.eclipselink.examples.library/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,3 @@
-#Wed Mar 19 20:33:15 CET 2008
+#Tue Oct 12 14:12:28 CEST 2004
 eclipse.preferences.version=1
-encoding//model/library.ecore_diagram=UTF-8
+
