--- a/tests/org.eclipse.emf.teneo.eclipselink.elistfactory.tests/build.properties
+++ b/tests/org.eclipse.emf.teneo.eclipselink.elistfactory.tests/build.properties
@@ -4,7 +4,8 @@ bin.includes = .classpath,\
                build.properties,\
                META-INF/,\
                src/,\
-               .
+               .,\
+               plugin.properties
 source.. = src/
 output.. = bin/
                
