--- a/tests/org.eclipse.emf.teneo.commontest/build.properties
+++ b/tests/org.eclipse.emf.teneo.commontest/build.properties
@@ -27,7 +27,8 @@ bin.includes = plugin.properties,\
                src/org/eclipse/emf/teneo/test/emf/sample/library.ecore,\
                src/org/eclipse/emf/teneo/test/emf/sample/default.mmd,\
                src/org/eclipse/emf/teneo/test/emf/sample/default.mindmap,\
-               src/org/eclipse/emf/teneo/test/emf/test.hbm.xml
+               src/org/eclipse/emf/teneo/test/emf/test.hbm.xml,\
+               src/org/eclipse/emf/teneo/test/emf/annotations/small_play.xml
 src.includes = about.html,\
                epl-v10.html,\
                copyright.txt,\
