Removed implicit DatabaseEObjectImpl root class from GenModel, added explicitly modeled Identifiable base class with uuid:long version:long fields to all model elements

--- a/examples/org.eclipse.emf.teneo.eclipselink.examples.library.edit/plugin.properties
+++ b/examples/org.eclipse.emf.teneo.eclipselink.examples.library.edit/plugin.properties
@@ -2,19 +2,7 @@
 # <copyright>
 # </copyright>
 #
-# $Id: plugin.properties,v 1.1 2008/04/15 21:11:00 seberle Exp $
-
-# ====================================================================
-# To code developer:
-#   Do NOT change the properties between this line and the
-#   "%%% END OF TRANSLATED PROPERTIES %%%" line.
-#   Make a new property name, append to the end of the file and change
-#   the code to use the new property.
-# ====================================================================
-
-# ====================================================================
-# %%% END OF TRANSLATED PROPERTIES %%%
-# ====================================================================
+# $Id: plugin.properties,v 1.2 2009/01/21 21:34:02 seberle Exp $
 
 pluginName = Library Edit Support
 providerName = www.example.org
@@ -39,6 +27,7 @@ _UI_BookStylesMapEntry_type = Book Styles Map Entry
 _UI_Translator_type = Translator
 _UI_TypeWriter_type = Type Writer
 _UI_Cover_type = Cover
+_UI_Identifiable_type = Identifiable
 _UI_Unknown_type = Object
 
 _UI_Unknown_datatype= Value
@@ -72,6 +61,8 @@ _UI_Translator_address_feature = Address
 _UI_TypeWriter_maker_feature = Maker
 _UI_TypeWriter_type_feature = Type
 _UI_Cover_colored_feature = Colored
+_UI_Identifiable_uuid_feature = Uuid
+_UI_Identifiable_version_feature = Version
 _UI_Unknown_feature = Unspecified
 
 _UI_BookCategory_Mystery_literal = Mystery
