Removed implicit DatabaseEObjectImpl root class from GenModel, added explicitly modeled Identifiable base class with uuid:long version:long fields to all model elements

--- a/examples/org.eclipse.emf.teneo.eclipselink.examples.library.editor/plugin.properties
+++ b/examples/org.eclipse.emf.teneo.eclipselink.examples.library.editor/plugin.properties
@@ -2,7 +2,7 @@
 # <copyright>
 # </copyright>
 #
-# $Id: plugin.properties,v 1.1 2008/04/15 21:14:36 seberle Exp $
+# $Id: plugin.properties,v 1.2 2009/01/21 21:34:10 seberle Exp $
 
 # ====================================================================
 # To code developer:
@@ -52,11 +52,12 @@ _UI_LibraryModelWizard_description = Create a new Library model
 _UI_LibraryEditor_label = Library Model Editor
 
 _UI_LibraryEditorFilenameDefaultBase = My
-_UI_LibraryEditorFilenameExtension = library
+_UI_LibraryEditorFilenameExtensions = library
 
 _UI_Wizard_label = New
 
-_WARN_FilenameExtension = The file name must end in ".{0}"
+_WARN_FilenameExtension = The file name must end in ''.{0}''
+_WARN_FilenameExtensions = The file name must have one of the following extensions: {0}
 
 _UI_ModelObject = &Model Object
 _UI_XMLEncoding = &XML Encoding
@@ -71,5 +72,5 @@ _UI_ForumEditor_menu = &Forum Editor
 _UI_ForumModelWizard_description = Create a new Forum model
 _UI_ForumEditor_label = Forum Model Editor
 _UI_ForumEditorFilenameDefaultBase = My
-_UI_ForumEditorFilenameExtension = forum
+_UI_ForumEditorFilenameExtensions = forum
 
