--- a/examples/org.eclipse.emf.teneo.eclipselink.examples.library.editor/plugin.properties
+++ b/examples/org.eclipse.emf.teneo.eclipselink.examples.library.editor/plugin.properties
@@ -2,7 +2,7 @@
 # <copyright>
 # </copyright>
 #
-# $Id: plugin.properties,v 1.2 2009/01/21 21:34:10 seberle Exp $
+# $Id: plugin.properties,v 1.3 2009/01/23 21:51:14 mtaal Exp $
 
 # ====================================================================
 # To code developer:
@@ -16,7 +16,7 @@
 # %%% END OF TRANSLATED PROPERTIES %%%
 # ====================================================================
 
-pluginName = Library Editor
+pluginName = EMF Teneo EclipseLink Library Editor
 providerName = www.example.org
 
 _UI_LibraryEditor_menu = &Library Editor
