Added mandatory about.html and license.txt files

--- a/examples/org.eclipse.emf.teneo.eclipselink.examples.library.orm/plugin.properties
+++ b/examples/org.eclipse.emf.teneo.eclipselink.examples.library.orm/plugin.properties
@@ -10,6 +10,6 @@
 # %%% END OF TRANSLATED PROPERTIES %%%
 # ====================================================================
 
-pluginName = Library O/R Mapping
+pluginName = EMF Teneo EclipseLink Library O/R Mapping
 providerName = www.example.org
 
