Added mandatory about.html and license.txt files

--- a/examples/org.eclipse.emf.teneo.eclipselink.examples.library.edit/plugin.properties
+++ b/examples/org.eclipse.emf.teneo.eclipselink.examples.library.edit/plugin.properties
@@ -2,9 +2,9 @@
 # <copyright>
 # </copyright>
 #
-# $Id: plugin.properties,v 1.2 2009/01/21 21:34:02 seberle Exp $
+# $Id: plugin.properties,v 1.3 2009/01/23 21:51:28 mtaal Exp $
 
-pluginName = Library Edit Support
+pluginName = EMF Teneo EclipseLink Library Edit Support
 providerName = www.example.org
 
 _UI_CreateChild_text = {0}
