Added mandatory about.html and license.txt files

--- a/tests/org.eclipse.emf.teneo.eclipselink.examples.library.orm.tests/plugin.properties
+++ b/tests/org.eclipse.emf.teneo.eclipselink.examples.library.orm.tests/plugin.properties
@@ -10,6 +10,6 @@
 # %%% END OF TRANSLATED PROPERTIES %%%
 # ====================================================================
 
-pluginName = Library O/R Mapping Tests
+pluginName = EMF Teneo EclipseLink Library O/R Mapping Tests
 providerName = www.example.org
 
