Added mandatory about.html and license.txt files

--- a/examples/org.eclipse.emf.teneo.eclipselink.examples.library/plugin.properties
+++ b/examples/org.eclipse.emf.teneo.eclipselink.examples.library/plugin.properties
@@ -2,7 +2,7 @@
 # <copyright>
 # </copyright>
 #
-# $Id: plugin.properties,v 1.1 2008/04/15 21:09:34 seberle Exp $
+# $Id: plugin.properties,v 1.2 2009/01/23 21:51:35 mtaal Exp $
 
 # ====================================================================
 # To code developer:
@@ -16,5 +16,5 @@
 # %%% END OF TRANSLATED PROPERTIES %%%
 # ====================================================================
 
-pluginName = Library Model
+pluginName = EMF Teneo EclipseLink 
 providerName = www.example.org
