--- a/plugins/org.eclipse.emf.teneo.eclipselink.sdk-feature/sourceTemplatePlugin/plugin.properties
+++ b/plugins/org.eclipse.emf.teneo.eclipselink.sdk-feature/sourceTemplatePlugin/plugin.properties
@@ -12,7 +12,7 @@
 #  *
 #  * </copyright>
 #  *
-#  * $Id: plugin.properties,v 1.1 2009/01/23 22:07:02 mtaal Exp $
+#  * $Id: plugin.properties,v 1.2 2009/01/23 22:11:06 mtaal Exp $
 #  */
 
 # NLS_MESSAGEFORMAT_VAR
@@ -24,7 +24,7 @@
 # append it to the end of the file, and change the code to use the new name.
 # ==============================================================================
 
-pluginName=EMF Teneo EclipseLink Source
+pluginName=Teneo Source
 providerName=Eclipse.org
 
 # ==============================================================================
