--- a/plugins/org.eclipse.emf.teneo.eclipselink.sdk-feature/feature.properties
+++ b/plugins/org.eclipse.emf.teneo.eclipselink.sdk-feature/feature.properties
@@ -1,6 +1,6 @@
-#/**
-# * <copyright>
-# *
+# /**
+#  * <copyright>
+#  *
 # * Copyright (c) 2008-2009 Oracle and Geensys.
 # * All rights reserved. This program and the accompanying materials
 # * are made available under the terms of the Eclipse Public License v1.0
@@ -9,11 +9,11 @@
 # *
 # * Contributors:
 # *     Oracle and Geensys - initial API and implementation
-# *
-# * </copyright>
-# *
-# * $Id: feature.properties,v 1.1 2009/01/23 22:07:02 mtaal Exp $
-# */
+#  *
+#  * </copyright>
+#  *
+#  * $Id: feature.properties,v 1.2 2009/01/23 22:11:06 mtaal Exp $
+#  */
 
 # NLS_MESSAGEFORMAT_VAR
 
@@ -29,26 +29,26 @@
 # java.io.Properties file (ISO 8859-1 with "\" escapes)
 # This file should be translated.
 
+# ==============================================================================
+# %%% END OF TRANSLATED PROPERTIES %%%
+# The above properties have been shipped for translation.
+# ==============================================================================
+
 # "featureName" property - name of the feature
-featureName=EMF Teneo Eclipselink Feature
+featureName=EMF Teneo Eclipselink SDK Feature
 
 # "providerName" property - name of the company that provides the feature
 providerName=Eclipse.org
 
 # "updateSiteName" property - label for the update site
-updateSiteName=Eclipse Modeling Framework Technology (EMF) Updates
+updateSiteName=Eclipse.org update site
 
 # "description" property - description of the feature
-description=EMF EclipseLink Object Relational Persistence
+description=Binaries and API documentation and source zips for EMF Teneo EclipseLink.
 
 # "licenseURL" property - URL of the "Feature License"
 # do not translate value - just change to point to a locale-specific HTML page
 licenseURL=license.html
-
-# ==============================================================================
-# %%% END OF TRANSLATED PROPERTIES %%%
-# The above properties have been shipped for translation.
-# ==============================================================================
 
 # "license" property - text of the "Feature Update License"
 # should be plain text version of license agreement pointed to be "licenseURL"
@@ -143,3 +143,6 @@ using any encryption software, please check the country's laws,\n\
 regulations and policies concerning the import, possession, or use,\n\
 and re-export of encryption software, to see if this is permitted.\n
 ########### end of license property ##########################################
+
+# "updateSiteName" property - label for the EMFT update site
+updateSiteName=Eclipse Modeling Framework Technologies (EMFT) Updates
