--- a/plugins/org.eclipse.emf.teneo.eclipselink.sdk-feature/sourceTemplateFeature/build.properties
+++ b/plugins/org.eclipse.emf.teneo.eclipselink.sdk-feature/sourceTemplateFeature/build.properties
@@ -2,5 +2,4 @@ bin.includes = feature.xml,\
                feature.properties,\
                epl-v10.html,\
                eclipse_update_120.jpg,\
-               license.html,\
-               modeling32.png
+               license.html
