--- a/plugins/org.eclipse.emf.teneo.eclipselink.sdk-feature/sourceTemplateFeature/feature.properties
+++ b/plugins/org.eclipse.emf.teneo.eclipselink.sdk-feature/sourceTemplateFeature/feature.properties
@@ -12,7 +12,7 @@
 #  *
 #  * </copyright>
 #  *
-#  * $Id: feature.properties,v 1.1 2009/01/23 22:07:02 mtaal Exp $
+#  * $Id: feature.properties,v 1.2 2009/01/23 22:11:06 mtaal Exp $
 #  */
 
 # NLS_MESSAGEFORMAT_VAR
@@ -30,7 +30,7 @@
 # This file should be translated.
 
 # "featureName" property - name of the feature
-featureName=Teneo EMF EclipseLink Persistence Source
+featureName=Teneo EMF Persistence Source
 
 # "providerName" property - name of the company that provides the feature
 providerName=Eclipse.org
@@ -39,7 +39,7 @@ providerName=Eclipse.org
 updateSiteName=Eclipse.org update site
 
 # "description" property - description of the feature
-description=EMF EclipseLink Object Relational Persistence (source code)
+description=EMF Object Relational Persistence (source code)
 
 # "licenseURL" property - URL of the "Feature License"
 # do not translate value - just change to point to a locale-specific HTML page
