--- a/plugins/org.eclipse.emf.teneo.eclipselink.sdk-feature/sourceTemplatePlugin/build.properties
+++ b/plugins/org.eclipse.emf.teneo.eclipselink.sdk-feature/sourceTemplatePlugin/build.properties
@@ -5,13 +5,12 @@ bin.includes = plugin.xml,\
                about.ini,\
                about.mappings,\
                about.properties,\
-               eclipse32.gif,\
+               modeling32.png,\
                src/,\
                META-INF/,\
                copyright.txt,\
                epl-v10.html,\
                feature.properties,\
                feature.xml,\
-               license.html,\
-               modeling32.png
+               license.html
 sourcePlugin = true
