--- a/plugins/org.eclipse.emf.teneo.eclipselink.sdk-feature/build.properties
+++ b/plugins/org.eclipse.emf.teneo.eclipselink.sdk-feature/build.properties
@@ -5,4 +5,4 @@ bin.includes = epl-v10.html,\
                feature.xml,\
                license.html
 root=rootfiles
-generate.feature@org.eclipse.emf.teneo.eclipselink.source=org.eclipse.emf.teneo.eclipse.link
+generate.feature@org.eclipse.emf.teneo.eclipselink.source=org.eclipse.emf.teneo.eclipselink
