Added EclipseLink tests

--- a/tests/org.eclipse.emf.teneo.eclipselink.examples.library.orm.tests/plugin.properties
+++ b/tests/org.eclipse.emf.teneo.eclipselink.examples.library.orm.tests/plugin.properties
@@ -11,5 +11,5 @@
 # ====================================================================
 
 pluginName = EMF Teneo EclipseLink Library O/R Mapping Tests
-providerName = www.example.org
+providerName = eclipse.org
 
