Updated feature names and update sites

--- a/plugins/org.eclipse.emf.teneo.eclipselink.sdk-feature/sourceTemplateFeature/feature.properties
+++ b/plugins/org.eclipse.emf.teneo.eclipselink.sdk-feature/sourceTemplateFeature/feature.properties
@@ -12,7 +12,7 @@
 #  *
 #  * </copyright>
 #  *
-#  * $Id: feature.properties,v 1.2 2009/01/23 22:11:06 mtaal Exp $
+#  * $Id: feature.properties,v 1.3 2009/02/23 09:11:26 mtaal Exp $
 #  */
 
 # NLS_MESSAGEFORMAT_VAR
@@ -30,7 +30,7 @@
 # This file should be translated.
 
 # "featureName" property - name of the feature
-featureName=Teneo EMF Persistence Source
+featureName=Teneo EMF EclipseLink Source
 
 # "providerName" property - name of the company that provides the feature
 providerName=Eclipse.org
