Updated feature names and update sites

--- a/tests/org.eclipse.emf.teneo.tests-feature/feature.properties
+++ b/tests/org.eclipse.emf.teneo.tests-feature/feature.properties
@@ -36,10 +36,10 @@ featureName=Teneo EMF Persistence Test
 providerName=Eclipse.org
 
 # "updateSiteName" property - label for the update site
-updateSiteName=Eclipse Modeling Framework Technology (EMFT) Updates
+updateSiteName=Eclipse.org update site
 
 # "description" property - description of the feature
-description=Eclipse Modeling Framework Technology Teneo (documentation)
+description=Eclipse Modeling Framework Teneo Tests
 
 # "licenseURL" property - URL of the "Feature License"
 # do not translate value - just change to point to a locale-specific HTML page
