Updated feature names and update sites

--- a/plugins/org.eclipse.emf.teneo.eclipselink-feature/feature.properties
+++ b/plugins/org.eclipse.emf.teneo.eclipselink-feature/feature.properties
@@ -12,7 +12,7 @@
 # *
 # * </copyright>
 # *
-# * $Id: feature.properties,v 1.1 2009/01/23 22:09:14 mtaal Exp $
+# * $Id: feature.properties,v 1.2 2009/02/23 09:11:34 mtaal Exp $
 # */
 
 # NLS_MESSAGEFORMAT_VAR
@@ -30,13 +30,13 @@
 # This file should be translated.
 
 # "featureName" property - name of the feature
-featureName=EMF Teneo Eclipselink Feature
+featureName=EMF Teneo Eclipselink Runtime
 
 # "providerName" property - name of the company that provides the feature
 providerName=Eclipse.org
 
 # "updateSiteName" property - label for the update site
-updateSiteName=Eclipse Modeling Framework Technology (EMF) Updates
+updateSiteName=Eclipse.org Update site
 
 # "description" property - description of the feature
 description=EMF EclipseLink Object Relational Persistence
