--- a/tests/org.eclipse.emf.teneo.jpox.libraries/build.properties
+++ b/tests/org.eclipse.emf.teneo.jpox.libraries/build.properties
@@ -15,6 +15,7 @@ bin.includes = bcel-5.1.jar,\
                epl-v10.html,\
                license.html,\
                modeling32.png,\
-               plugin.properties
+               plugin.properties,\
+               mysql-connector-java-5.1.6-bin.jar
 javacSource=1.5
 javacTarget=1.5
