--- a/tests/org.eclipse.emf.teneo.hibernate.libraries/build.properties
+++ b/tests/org.eclipse.emf.teneo.hibernate.libraries/build.properties
@@ -1,9 +1,7 @@
 bin.includes = META-INF/,\
                readme.txt,\
-               ant-antlr-1.6.5.jar,\
                antlr-2.7.6.jar,\
                asm.jar,\
-               asm-attrs.jar,\
                cglib-2.1.3.jar,\
                commons-collections-2.1.1.jar,\
                commons-logging-1.0.4.jar,\
@@ -12,47 +10,18 @@ bin.includes = META-INF/,\
                hibernate3.jar,\
                hibernate-annotations.jar,\
                hibernate-entitymanager.jar,\
-               javassist.jar,\
-               jboss-archive-browsing.jar,\
                jta.jar,\
-               ant-1.6.5.jar,\
-               ant-junit-1.6.5.jar,\
-               ant-launcher-1.6.5.jar,\
-               ant-swing-1.6.5.jar,\
-               checkstyle-all.jar,\
-               cleanimports.jar,\
-               concurrent-1.3.2.jar,\
-               connector.jar,\
-               jaas.jar,\
-               jacc-1_0-fr.jar,\
-               jaxen-1.1-beta-7.jar,\
-               jboss-cache.jar,\
-               jboss-common.jar,\
-               jboss-jmx.jar,\
-               jboss-system.jar,\
-               jdbc2_0-stdext.jar,\
-               jgroups-2.2.8.jar,\
-               junit-3.8.1.jar,\
                log4j-1.2.11.jar,\
-               oscache-2.1.jar,\
-               proxool-0.8.3.jar,\
-               swarmcache-1.0rc2.jar,\
-               syndiag2.jar,\
-               versioncheck.jar,\
-               xerces-2.6.2.jar,\
-               xml-apis.jar,\
-               hibernate-commons-annotations.jar,\
                c3p0-0.9.1.jar,\
                ehcache-1.2.3.jar,\
-               jms.jar,\
-               lucene-core-2.2.0.jar,\
                hsqldb.jar,\
                about.html,\
                copyright.txt,\
                epl-v10.html,\
                license.html,\
                modeling32.png,\
-               plugin.properties
+               plugin.properties,\
+               mysql-connector-java-3.1.12-bin.jar
 jars.extra.classpath = ant-antlr-1.6.5.jar,\
                        antlr-2.7.6.jar,\
                        asm.jar,\
