--- a/tests/org.eclipse.emf.teneo.hibernate.libraries/about.properties
+++ b/tests/org.eclipse.emf.teneo.hibernate.libraries/about.properties
@@ -12,7 +12,7 @@
 # *
 # * </copyright>
 # *
-# * $Id: about.properties,v 1.1 2008/06/11 21:04:29 mtaal Exp $
+# * $Id: about.properties,v 1.2 2009/02/24 12:04:54 mtaal Exp $
 # */
 
 # NLS_MESSAGEFORMAT_VAR
@@ -36,7 +36,7 @@ featureText=Eclipse Modeling Framework Technology Object Relational Persistence 
 Version: {featureVersion}\n\
 Build id: {0}\n\
 \n\
-(c) Copyright Springsite BV (The Netherlands) and others. 2006.  All rights reserved.\n\
+(c) Copyright Springsite BV (The Netherlands) and others. 2006 - 2009.  All rights reserved.\n\
 \n\
 Visit http://www.eclipse.org/emft
 
