Updated mysql.jar dependency

--- a/tests/org.eclipse.emf.teneo.commontest/build.properties
+++ b/tests/org.eclipse.emf.teneo.commontest/build.properties
@@ -26,7 +26,8 @@ bin.includes = plugin.properties,\
                src/org/eclipse/emf/teneo/test/emf/sample/default.mmd,\
                src/org/eclipse/emf/teneo/test/emf/sample/default.mindmap,\
                src/org/eclipse/emf/teneo/test/emf/test.hbm.xml,\
-               src/org/eclipse/emf/teneo/test/emf/annotations/small_play.xml
+               src/org/eclipse/emf/teneo/test/emf/annotations/small_play.xml,\
+               lib/mysql-connector-java-5.1.6-bin.jar
 src.includes = about.html,\
                epl-v10.html,\
                copyright.txt,\
