Updated Teneo to EMF3.5M6

--- a/tests/org.eclipse.emf.teneo.hibernate.libraries/build.properties
+++ b/tests/org.eclipse.emf.teneo.hibernate.libraries/build.properties
@@ -7,7 +7,6 @@ bin.includes = META-INF/,\
                commons-logging-1.0.4.jar,\
                dom4j-1.6.1.jar,\
                ejb3-persistence.jar,\
-               hibernate3.jar,\
                hibernate-annotations.jar,\
                hibernate-entitymanager.jar,\
                jta.jar,\
@@ -53,7 +52,8 @@ bin.includes = META-INF/,\
                syndiag2.jar,\
                versioncheck.jar,\
                xerces-2.6.2.jar,\
-               xml-apis.jar
+               xml-apis.jar,\
+               hibernate3.jar
 jars.extra.classpath = ant-antlr-1.6.5.jar,\
                        antlr-2.7.6.jar,\
                        asm.jar,\
