Set the provider in plugin.properties

--- a/tests/org.eclipse.emf.teneo.tests/plugin.properties
+++ b/tests/org.eclipse.emf.teneo.tests/plugin.properties
@@ -12,7 +12,7 @@
 # *
 # * </copyright>
 # *
-# * $Id: plugin.properties,v 1.6 2008/05/27 07:42:06 mtaal Exp $
+# * $Id: plugin.properties,v 1.7 2009/05/06 16:00:21 mtaal Exp $
 # */
 
 # NLS_MESSAGEFORMAT_VAR
@@ -25,7 +25,7 @@
 # ==============================================================================
 
 Plugin.name = Teneo Tests
-Plugin.providerName = Eclipse.org
+Plugin.providerName = Eclipse Modeling Project
 
 # ==============================================================================
 # %%% END OF TRANSLATED PROPERTIES %%%
