Set the provider in plugin.properties

--- a/plugins/org.eclipse.emf.teneo.hibernate/plugin.properties
+++ b/plugins/org.eclipse.emf.teneo.hibernate/plugin.properties
@@ -12,7 +12,7 @@
 # *
 # * </copyright>
 # *
-# * $Id: plugin.properties,v 1.9 2008/05/27 07:42:04 mtaal Exp $
+# * $Id: plugin.properties,v 1.10 2009/05/06 16:01:28 mtaal Exp $
 # */
 
 # NLS_MESSAGEFORMAT_VAR
@@ -25,7 +25,7 @@
 # ==============================================================================
 
 Plugin.name = Teneo Hibernate
-Plugin.providerName = Eclipse.org
+Plugin.providerName = Eclipse Modeling Project
 
 # ==============================================================================
 # %%% END OF TRANSLATED PROPERTIES %%%
