Set the provider in plugin.properties

--- a/plugins/org.eclipse.emf.teneo.annotations/plugin.properties
+++ b/plugins/org.eclipse.emf.teneo.annotations/plugin.properties
@@ -12,7 +12,7 @@
 # *
 # * </copyright>
 # *
-# * $Id: plugin.properties,v 1.8 2008/05/22 18:19:50 mtaal Exp $
+# * $Id: plugin.properties,v 1.9 2009/05/06 16:01:29 mtaal Exp $
 # */
 
 # NLS_MESSAGEFORMAT_VAR
@@ -25,11 +25,9 @@
 # ==============================================================================
 
 Plugin.name = Teneo Annotations
-Plugin.providerName = Eclipse.org
+Plugin.providerName = Eclipse Modeling Project
 
 # ==============================================================================
 # %%% END OF TRANSLATED PROPERTIES %%%
 # The above properties have been shipped for translation.
 # ==============================================================================
-pluginName = Pannotation Model
-providerName = www.example.org
