Updated provider name in plugin.properties

--- a/examples/org.eclipse.emf.teneo.eclipselink.examples.library.editor/plugin.properties
+++ b/examples/org.eclipse.emf.teneo.eclipselink.examples.library.editor/plugin.properties
@@ -2,7 +2,7 @@
 # <copyright>
 # </copyright>
 #
-# $Id: plugin.properties,v 1.4 2009/01/27 22:05:42 seberle Exp $
+# $Id: plugin.properties,v 1.5 2009/05/06 16:01:51 mtaal Exp $
 
 # ====================================================================
 # To code developer:
@@ -17,7 +17,7 @@
 # ====================================================================
 
 pluginName = EMF Teneo EclipseLink Library Editor
-providerName = www.example.org
+providerName = Eclipse Modeling Project
 
 _UI_LibraryEditor_menu = &Library Editor
 
