Updated provider name in plugin.properties

--- a/examples/org.eclipse.emf.teneo.eclipselink.examples.library.orm/plugin.properties
+++ b/examples/org.eclipse.emf.teneo.eclipselink.examples.library.orm/plugin.properties
@@ -11,5 +11,5 @@
 # ====================================================================
 
 pluginName = EMF Teneo EclipseLink Library O/R Mapping
-providerName = www.example.org
+providerName = Eclipse Modeling Project
 
