Updated provider name in plugin.properties

--- a/plugins/org.eclipse.emf.teneo.eclipselink.elistfactory/plugin.properties
+++ b/plugins/org.eclipse.emf.teneo.eclipselink.elistfactory/plugin.properties
@@ -11,4 +11,4 @@
 # ====================================================================
 
 pluginName = EMF Teneo EclipseLink EListFactory Plug-in
-providerName = Eclipse.org
+providerName = Eclipse Modeling Project
