Changed to non-java project removed buildproperties

--- a/plugins/org.eclipse.emf.teneo.ui.capabilities/build.properties
+++ b/plugins/org.eclipse.emf.teneo.ui.capabilities/build.properties
@@ -1,4 +1,10 @@
-source.. = src/
 output.. = bin/
-bin.includes = META-INF/,\
-               .
+bin.includes = plugin.xml,\
+               plugin.properties,\
+               META-INF/,\
+               epl-v10.html,\
+               modeling32.png,\
+               about.ini,\
+               about.properties,\
+               copyright.txt,\
+               about.html
